Use Set.of() in SchemaContext
Upgraded modernizer does not like our use of Collections.emptySet(): use
Set.of() instead. Also replace our use of ImmutableSet.of() with
Set.of() to keep things consistent.

Change-Id: I0f3db090ff6f892831e51a85a67581ba9e3a0f3a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>